<resources>
    <string name="app_name">足下</string>

    <!--主页menu-->
    <string name="home_menu_setting">设置</string>
    <string name="home_menu_about">关于</string>
    <string name="home_menu_feedback">反馈</string>
    <string name="home_menu_help">帮助</string>

    <!--主页未登陆时-->
    <string name="home_unLogin_text">登录，开启你的足下之旅</string>

    <!--主页功能栏-->
    <string name="home_broadcast">广播</string>
    <string name="home_friends">朋友</string>
    <string name="home_rooms">房间</string>

    <!--主页最近列表-->
    <string name="home_recently_text">最近记录</string>

    <!--主页fab-->
    <string name="home_fab_search">搜索</string>
    <string name="home_fab_draw">绘制</string>
    <string name="home_fab_walk">行走</string>

    <!--地图分享-->
    <string name="map_menu_share">分享</string>
    <string name="map_menu_save">保存</string>

    <!--登录-->
    <string name="login_bar_text">登录</string>
    <string name="login_btn_text">登 录</string>
    <string name="login_register">新用户注册</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_dialog_succee">登陆成功</string>
    <string name="login_dialog_fail">登陆失败</string>
    <string name="login_dialog_Loading">正在登陆</string>
    <string name="login_dialog_cancel">登陆取消</string>


    <!--注册-->
    <string name="title_activity_regster">注册</string>
    <string name="register_bar_text">注册</string>
    <string name="register_nickname">昵称</string>
    <string name="register_edit_nick_hint">请输入昵称</string>
    <string name="register_edit_phone_hint">仅限大陆地区</string>
    <string name="register_phonenumber">手机号</string>
    <string name="register_btn_send">发送验证短信</string>
    <string name="register_edit_password">密码</string>
    <string name="register_edit_password_hint">填写密码</string>
    <string name="register_edit_VerifyCode">填写验证码</string>
    <string name="register_dialog_succee">注册成功</string>
    <string name="register_dialog_fail">注册失败</string>
    <string name="register_dialog_Loading">正在注册</string>
    <string name="register_dialog_cancel">注册取消</string>
    <string name="verify_btn_ok">确定</string>

    <string name="edit_info">修改资料</string>

    <!--activity-->
    <string name="activity_dialog">提示</string>

    <!-- Message-->

    <string name="Add_friend">添加好友</string>
    <string name="Add_agree">同意</string>
    <string name="Add_refuse">拒绝</string>
    <string name="send_message">发送消息</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_verify">VerifyActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_chat">ChatActivity</string>

</resources>
