<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    tools:context="team.far.footing.ui.activity.RegisterActivity">

    <LinearLayout
        android:id="@+id/register_lin_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_fab_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"

            android:text="@string/register_bar_text"
            android:textSize="26dp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_lin_bar"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/register_nickname"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/register_edit_nick_hint"
                    android:textColor="@color/secondary_text"
                    android:textColorHint="@color/rfab__color_background_pressed"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/register_edit_password"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/register_edit_password_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:textColorHint="@color/rfab__color_background_pressed"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:gravity="center_vertical"
                    android:text="@string/register_phonenumber"
                    android:textColor="@color/secondary_text"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/register_edit_phone_hint"
                    android:inputType="number"
                    android:maxLength="11"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:textColorHint="@color/rfab__color_background_pressed"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/register_edit_VerifyCode"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="16dp"
                android:background="@null"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:hint="@string/register_edit_VerifyCode"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@android:color/tertiary_text_dark"
                android:textColorHint="@color/rfab__color_background_pressed"
                android:textSize="14sp" />



            <Button
                android:layout_alignRight="@id/register_edit_VerifyCode"
                android:id="@+id/send"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:text="@string/register_btn_send"
                android:textColor="?colorAccent" />
        </RelativeLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
