<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/login_lin_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/home_fab_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/login_bar_text"
            android:textSize="26dp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/login_CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_lin_bar"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical">


                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="16dp" />

                <EditText
                    android:id="@+id/login_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="请输入手机号码"
                    android:inputType="number"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:textColorHint="@color/rfab__color_background_pressed"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="16dp" />

                <EditText
                    android:id="@+id/login_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="请输入密码"
                    android:inputType="textPassword"
                    android:textColor="@android:color/tertiary_text_dark"
                    android:textColorHint="@color/rfab__color_background_pressed"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_below="@+id/login_CardView"
        android:layout_margin="16dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/login_btn_text"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/login_btn_login"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/login_register"
            android:textColor="@android:color/holo_blue_light" />

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/find_password"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/login_forget_password"
            android:textColor="@color/home_fab_color" />
    </LinearLayout>

</RelativeLayout>