<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_layout_function"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="18dp"
            android:paddingTop="28dp">

            <ImageView
                android:id="@+id/home_iv_broadcast"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_home_broadcast" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/home_broadcast"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/primary_text_size" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_divider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="18dp"
            android:paddingTop="28dp">

            <ImageView
                android:id="@+id/home_iv_friends"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_home_friends" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/home_friends"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/primary_text_size" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/background_divider" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="18dp"
            android:paddingTop="28dp">

            <ImageView
                android:id="@+id/home_iv_rooms"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_home_rooms" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/home_rooms"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/primary_text_size" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@color/divider_color"/>

</LinearLayout>